SWATCH-2290: Have swatch-producer-aws emit status
- Port the logic from swatch-producer-azure around retryAfter (non-fatal billable usage errors should be retried).
- Emit status when swatch-producer-aws handles the usages.